new ui change pushed

--- a/templates/newJobParser.html
+++ b/templates/newJobParser.html
@@ -18,7 +18,7 @@
 <body>
 <div class="pull-right">
         <ul class="nav navbar-nav">
-            <li><button type="submit" class="btn navbar-btn btn-danger" onClick="location.href='/home/index'" name="logout" id="logout"  value="Log Out">Log Out</button></li>
+            <li><button type="submit" class="btn navbar-btn btn-danger" onClick="location.href='/logout/'" name="logout" id="logout"  value="Log Out">Log Out</button></li>
         </ul>
 </div>
 <div class="page-header">
@@ -57,7 +57,7 @@
                         <div class="col-sm-4">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-primary" name="button">Save</button>
+                                    <button type="submit" class="btn btn-primary" onClick="location.href='/home/addparserjob'" name="button">Save</button>
                                 </div>
                             </div>
                         </div>
