--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                   <div class="col-sm-4">
                     <div class="input-group">
                       <div class="input-group-btn">
-                        <button type="submit" class="btn btn-primary" name="button">Sign In</button>
+                        <button type="submit" class="btn btn-primary" onClick="location.href='/home/index/'" name="button">Sign In</button>
                       </div>
                     </div>
                     </div>
