scheduler bug has been fixed

--- a/templates/jobScheduler.html
+++ b/templates/jobScheduler.html
@@ -162,6 +162,7 @@
                                     <th>Site URL</th>
                                     <th>Job Title</th>
                                     <th>Created Date</th>
+                                    <th>Status</th>
                                     <th>Action</th>
                                 </tr>
                                 </thead>
