--- a/templates/newJobParser.html
+++ b/templates/newJobParser.html
@@ -18,9 +18,11 @@
 <body>
 <div class="pull-right">
         <ul class="nav navbar-nav">
+            <li><button type="submit" class="btn navbar-btn btn-danger" onClick="location.href='/home/addjobinscheduler'" name="scheduler" id="scheduler"  value="scheduler">Go to Add Scheduler</button></li>
             <li><button type="submit" class="btn navbar-btn btn-danger" onClick="location.href='/logout/'" name="logout" id="logout"  value="Log Out">Log Out</button></li>
         </ul>
 </div>
+
 <div class="page-header">
 
     <div class="container">
