--- a/templates/jobScheduler.html
+++ b/templates/jobScheduler.html
@@ -16,6 +16,12 @@
         <![endif]-->
 </head>
 <body>
+<div class="pull-right">
+        <ul class="nav navbar-nav">
+            <li><button type="submit" class="btn navbar-btn btn-danger" onClick="location.href='/home/addparserjob'" name="scheduler" id="scheduler"  value="scheduler">Back to Add Site</button></li>
+            <li><button type="submit" class="btn navbar-btn btn-danger" onClick="location.href='/logout/'" name="logout" id="logout"  value="Log Out">Log Out</button></li>
+        </ul>
+</div>
 <div class="page-header">
     <div class="container">
         <div class="row">
