--- a/templates/jobScheduler.html
+++ b/templates/jobScheduler.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="refresh" content="30">
     <title>Job Data Aggregation</title>
     <link href='{% static "css/bootstrap.min.css" %}' rel="stylesheet">
     <link href='{% static "css/nice-select.css" %}' rel="stylesheet">
@@ -51,42 +52,7 @@
                             {{field.errors}}
                         </div>
                     {% endfor %}
-                    {#                <div class="form-group">#}
-                    {#                  <select>#}
-                    {#                        <option value="1">indend.com</option>#}
-                    {#                        <option value="2">dice.com</option>#}
-                    {#                        <option value="3">linkdin.com</option>#}
-                    {#                        <option value="4">monstar.com</option>#}
-                    {#                    </select>#}
-                    {#                </div>#}
-                    {#                <div class="form-group">#}
-                    {#                  <label>Job Title</label>#}
-                    {#                  <input type="text" class="form-control" placeholder="Job Title Syntex or Class Annotation">#}
-                    {#                </div>#}
-                    {#                <div class="form-group">#}
-                    {#                  <label>Location</label>#}
-                    {#                  <input type="text" class="form-control" placeholder="New York, United States">#}
-                    {#                </div>#}
-                    {#                <div class="form-group">#}
-                    {#                  <label>Company Name</label>#}
-                    {#                  <input type="text" class="form-control">#}
-                    {#                </div>#}
-                    {#                <div class="form-group">#}
-                    {#                 <label>Recurrence</label>#}
-                    {#                  <select>#}
-                    {#                        <option value="1">Daily</option>#}
-                    {#                        <option value="2">Every Two Day</option>#}
-                    {#                        <option value="3">Weekly</option>#}
-                    {#                        <option value="4">Monthly</option>#}
-                    {#                    </select>#}
-                    {#                 </div>#}
-                    {#                <div class="form-group">#}
-                    {#                  <label>Daily Search Start Time</label>#}
-                    {#                  <input type="text" class="form-control" placeholder="Time">#}
-                    {#                </div>#}
-                    {#                <div class="checkbox">#}
-                    {#                    <label><input type="checkbox" value="">until stop</label>#}
-                    {#                 </div>#}
+
 
                     <div class="row">
                         <div class="col-sm-4">
@@ -126,39 +92,6 @@
     <div class="row">
         <div class="col-md-12">
             <div class="data-table">
-                {#                <div class="row">#}
-                {#                    <div class="col-md-3">#}
-                {#                        <div class="form-group">#}
-                {#                            <input type="text" class="form-control" placeholder="Job title, keyword">#}
-                {#                        </div>#}
-                {#                    </div>#}
-                {#                    <div class="col-sm-3">#}
-                {#                        <div class="data-visible">#}
-                {#                            <select>#}
-                {#                                <option value="1">Location Ctiy</option>#}
-                {#                                <option value="2">New Work, USA (888)</option>#}
-                {#                                <option value="3">Dalas TAX</option>#}
-                {#                            </select>#}
-                {#                        </div>#}
-                {#                    </div>#}
-                {#                    <div class="col-sm-3">#}
-                {#                        <div class="data-visible">#}
-                {#                            <select>#}
-                {#                                <option value="1">Job Site</option>#}
-                {#                                <option value="2">Monstar India</option>#}
-                {#                                <option value="3">Dice</option>#}
-                {#                                <option value="4">Indeed</option>#}
-                {#                            </select>#}
-                {#                        </div>#}
-                {#                    </div>#}
-                {#                    <div class="col-sm-3">#}
-                {#                        <div class="input-group">#}
-                {#                            <div class="input-group-btn">#}
-                {#                                <button type="button" class="btn btn-default btn-md" name="button">Search</button>#}
-                {#                            </div>#}
-                {#                        </div>#}
-                {#                    </div>#}
-                {#                </div>#}
                 <div class="row">
                     <div class="col-md-12">
                         <div class="table-responsive text-center table-color">
@@ -173,38 +106,6 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-{#                                <tr>#}
-{#                                    <td>1</td>#}
-{#                                    <td>Business Analyst</td>#}
-{#                                    <td>Indeed.com</td>#}
-{#                                    <td>Indeed India</td>#}
-{#                                    <td>June 12, 2017</td>#}
-{#                                    <td><a href="#">Edit</a> <a href="">Delete</a></td>#}
-{#                                </tr>#}
-{#                                <tr>#}
-{#                                    <td>2</td>#}
-{#                                    <td>Business Analyst</td>#}
-{#                                    <td>Indeed.com</td>#}
-{#                                    <td>Indeed India</td>#}
-{#                                    <td>June 12, 2017</td>#}
-{#                                    <td><a href="#">Edit</a> <a href="">Delete</a></td>#}
-{#                                </tr>#}
-{#                                <tr>#}
-{#                                    <td>3</td>#}
-{#                                    <td>Business Analyst</td>#}
-{#                                    <td>Indeed.com</td>#}
-{#                                    <td>Indeed India</td>#}
-{#                                    <td>June 12, 2017</td>#}
-{#                                    <td><a href="#">Edit</a> <a href="">Delete</a></td>#}
-{#                                </tr>#}
-{#                                <tr>#}
-{#                                    <td>4</td>#}
-{#                                    <td>Business Analyst</td>#}
-{#                                    <td>Indeed.com</td>#}
-{#                                    <td>Indeed India</td>#}
-{#                                    <td>June 12, 2017</td>#}
-{#                                    <td><a href="#">Edit</a> <a href="">Delete</a></td>#}
-{#                                </tr>#}
                                 {% for jobScheduler in scheduledJobListJson %}
                                     <tr>
                                         <td>{{ jobScheduler.siteURL}}</td>
@@ -230,7 +131,7 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src='{% static "js/js/bootstrap.min.js" %}'></script>
+<script src='{% static "js/bootstrap.min.js" %}'></script>
 <script src='{% static "js/jquery.nice-select.min.js" %}'></script>
 <script src='{% static "js/main.js" %}'></script>
 </body>
